--- a/homework/Day_002_HW.ipynb
+++ b/homework/Day_002_HW.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +333,108 @@
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "app_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GENDER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Jack</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>David</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Amy</th>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>John</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Peter</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andy</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dora</th>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frank</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Black</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       GENDER\n",
+       "Jack     Male\n",
+       "David    Male\n",
+       "Amy    Female\n",
+       "John     Male\n",
+       "Peter    Male\n",
+       "Andy     Male\n",
+       "Dora   Female\n",
+       "Frank    Male\n",
+       "Black    Male"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gender = [\"Male\", \"Male\", \"Female\", \"Male\", \"Male\", \"Male\", \"Female\", \"Male\", \"Male\"]\n",
+    "name = [\"Jack\", \"David\", \"Amy\", \"John\", \"Peter\", \"Andy\", \"Dora\", \"Frank\", \"Black\"]\n",
+    "df = pd.DataFrame(gender, index = name, columns = [\"GENDER\"])\n",
+    "df"
    ]
   },
   {
@@ -532,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -619,13 +714,244 @@
        "6      100009       0         Cash loans"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "app_train.loc[0:6,'SK_ID_CURR':'NAME_CONTRACT_TYPE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SK_ID_CURR</th>\n",
+       "      <th>TARGET</th>\n",
+       "      <th>NAME_CONTRACT_TYPE</th>\n",
+       "      <th>CODE_GENDER</th>\n",
+       "      <th>FLAG_OWN_CAR</th>\n",
+       "      <th>FLAG_OWN_REALTY</th>\n",
+       "      <th>CNT_CHILDREN</th>\n",
+       "      <th>AMT_INCOME_TOTAL</th>\n",
+       "      <th>AMT_CREDIT</th>\n",
+       "      <th>AMT_ANNUITY</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FLAG_DOCUMENT_18</th>\n",
+       "      <th>FLAG_DOCUMENT_19</th>\n",
+       "      <th>FLAG_DOCUMENT_20</th>\n",
+       "      <th>FLAG_DOCUMENT_21</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_HOUR</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_DAY</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_WEEK</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_MON</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_QRT</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>202500.0</td>\n",
+       "      <td>406597.5</td>\n",
+       "      <td>24700.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200525</th>\n",
+       "      <td>332450</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>81000.0</td>\n",
+       "      <td>450000.0</td>\n",
+       "      <td>48465.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200523</th>\n",
+       "      <td>332448</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99000.0</td>\n",
+       "      <td>398016.0</td>\n",
+       "      <td>26595.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200481</th>\n",
+       "      <td>332406</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>900000.0</td>\n",
+       "      <td>38263.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200454</th>\n",
+       "      <td>332374</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>592560.0</td>\n",
+       "      <td>40216.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 122 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SK_ID_CURR  TARGET NAME_CONTRACT_TYPE CODE_GENDER FLAG_OWN_CAR  \\\n",
+       "0           100002       1         Cash loans           M            N   \n",
+       "200525      332450       1         Cash loans           F            N   \n",
+       "200523      332448       1         Cash loans           M            Y   \n",
+       "200481      332406       1         Cash loans           F            Y   \n",
+       "200454      332374       1         Cash loans           F            N   \n",
+       "\n",
+       "       FLAG_OWN_REALTY  CNT_CHILDREN  AMT_INCOME_TOTAL  AMT_CREDIT  \\\n",
+       "0                    Y             0          202500.0    406597.5   \n",
+       "200525               N             0           81000.0    450000.0   \n",
+       "200523               N             0           99000.0    398016.0   \n",
+       "200481               Y             0           90000.0    900000.0   \n",
+       "200454               N             0          360000.0    592560.0   \n",
+       "\n",
+       "        AMT_ANNUITY  ...  FLAG_DOCUMENT_18 FLAG_DOCUMENT_19 FLAG_DOCUMENT_20  \\\n",
+       "0           24700.5  ...                 0                0                0   \n",
+       "200525      48465.0  ...                 0                0                0   \n",
+       "200523      26595.0  ...                 0                0                0   \n",
+       "200481      38263.5  ...                 0                0                0   \n",
+       "200454      40216.5  ...                 0                0                0   \n",
+       "\n",
+       "       FLAG_DOCUMENT_21 AMT_REQ_CREDIT_BUREAU_HOUR AMT_REQ_CREDIT_BUREAU_DAY  \\\n",
+       "0                     0                        0.0                       0.0   \n",
+       "200525                0                        NaN                       NaN   \n",
+       "200523                0                        0.0                       0.0   \n",
+       "200481                0                        0.0                       0.0   \n",
+       "200454                0                        NaN                       NaN   \n",
+       "\n",
+       "        AMT_REQ_CREDIT_BUREAU_WEEK  AMT_REQ_CREDIT_BUREAU_MON  \\\n",
+       "0                              0.0                        0.0   \n",
+       "200525                         NaN                        NaN   \n",
+       "200523                         0.0                        0.0   \n",
+       "200481                         0.0                        0.0   \n",
+       "200454                         NaN                        NaN   \n",
+       "\n",
+       "        AMT_REQ_CREDIT_BUREAU_QRT  AMT_REQ_CREDIT_BUREAU_YEAR  \n",
+       "0                             0.0                         1.0  \n",
+       "200525                        NaN                         NaN  \n",
+       "200523                        0.0                         3.0  \n",
+       "200481                        1.0                         1.0  \n",
+       "200454                        NaN                         NaN  \n",
+       "\n",
+       "[5 rows x 122 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter = app_train[\"TARGET\"]>0;\n",
+    "app_train[filter].sort_values(by= \"NAME_CONTRACT_TYPE\").head()"
    ]
   }
  ],
