--- a/homework/Day_016_HW.ipynb
+++ b/homework/Day_016_HW.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# 設定 data_path\n",
-    "dir_data = '../data/'\n",
+    "dir_data = '../data/part1'\n",
     "f_app_train = os.path.join(dir_data, 'application_train.csv')\n",
     "f_app_test = os.path.join(dir_data, 'application_test.csv')\n",
     "\n",
@@ -239,11 +239,24 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.06505115, 0.12640086, 0.08123883, ..., 0.05702381, 0.07413523,\n",
+       "       0.08983229])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 用模型預測結果\n",
     "# 請注意羅吉斯迴歸是分類預測 (會輸出 0 的機率, 與 1 的機率), 而我們只需要留下 1 的機率這排\n",
-    "log_reg_pred = log_reg.predict_proba(test)[:, 1]"
+    "log_reg_pred = log_reg.predict_proba(test)[:, 1]\n",
+    "log_reg_pred"
    ]
   },
   {
@@ -259,79 +272,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\tools\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SK_ID_CURR</th>\n",
-       "      <th>TARGET</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100001</td>\n",
-       "      <td>0.065051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100005</td>\n",
-       "      <td>0.126401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100013</td>\n",
-       "      <td>0.081239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100028</td>\n",
-       "      <td>0.061509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100038</td>\n",
-       "      <td>0.128308</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   SK_ID_CURR    TARGET\n",
-       "0      100001  0.065051\n",
-       "1      100005  0.126401\n",
-       "2      100013  0.081239\n",
-       "3      100028  0.061509\n",
-       "4      100038  0.128308"
+       "0    100001\n",
+       "1    100005\n",
+       "2    100013\n",
+       "3    100028\n",
+       "4    100038\n",
+       "Name: SK_ID_CURR, dtype: object"
       ]
      },
      "execution_count": 9,
@@ -341,17 +289,26 @@
    ],
    "source": [
     "# 計算提交結果\n",
-    "submit = app_test[['SK_ID_CURR']]\n",
-    "submit['TARGET'] = log_reg_pred\n",
+    "submit = app_test.loc[:,'SK_ID_CURR'].copy()\n",
+    "submit.loc['TARGET'] = log_reg_pred\n",
     "\n",
     "submit.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\tools\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: The signature of `Series.to_csv` was aligned to that of `DataFrame.to_csv`, and argument 'header' will change its default value from False to True: please pass an explicit value to suppress this warning.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
    "source": [
     "submit.to_csv('Day_016_HW.csv', index=False)"
    ]
