--- a/homework/Day_019_HW.ipynb
+++ b/homework/Day_019_HW.ipynb
@@ -395,25 +395,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6971346062663598"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 空值補 -1,使用\"最小最大化\"標準化資料 做羅吉斯迴歸\n",
-    "df1 = df.fillna(-1)\n",
-    "df_temp = MinMaxScaler().fit_transform(df1.astype(float))\n",
-    "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
+    "df = df.astype(float)"
    ]
   },
   {
@@ -424,7 +408,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6982582017719778"
+       "0.6971346062663598"
       ]
      },
      "execution_count": 8,
@@ -433,9 +417,9 @@
     }
    ],
    "source": [
-    "# 空值補 -1,使用\"標準化\"資料 做羅吉斯迴歸\n",
+    "# 空值補 -1,使用\"最小最大化\"標準化資料 做羅吉斯迴歸\n",
     "df1 = df.fillna(-1)\n",
-    "df_temp = StandardScaler().fit_transform(df1.astype(float))\n",
+    "df_temp = MinMaxScaler().fit_transform(df1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression(solver='liblinear')\n",
     "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
@@ -449,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6993501991462476"
+       "0.6982582017719778"
       ]
      },
      "execution_count": 9,
@@ -458,9 +442,9 @@
     }
    ],
    "source": [
-    "# 空值補 mean,使用\"最小最大化\"標準化資料 做羅吉斯迴歸\n",
-    "df1 = df.fillna(df.mean())\n",
-    "df_temp = MinMaxScaler().fit_transform(df1.astype(float))\n",
+    "# 空值補 -1,使用\"標準化\"資料 做羅吉斯迴歸\n",
+    "df1 = df.fillna(-1)\n",
+    "df_temp = StandardScaler().fit_transform(df1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression(solver='liblinear')\n",
     "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
@@ -474,7 +458,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6959413955734954"
+       "0.6993501991462476"
       ]
      },
      "execution_count": 10,
@@ -483,9 +467,9 @@
     }
    ],
    "source": [
-    "# 空值補 mean,使用\"標準化\"資料 做羅吉斯迴歸\n",
+    "# 空值補 mean,使用\"最小最大化\"標準化資料 做羅吉斯迴歸\n",
     "df1 = df.fillna(df.mean())\n",
-    "df_temp = StandardScaler().fit_transform(df1.astype(float))\n",
+    "df_temp = MinMaxScaler().fit_transform(df1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression(solver='liblinear')\n",
     "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
@@ -499,7 +483,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7016289882888318"
+       "0.6959413955734954"
       ]
      },
      "execution_count": 11,
@@ -508,9 +492,9 @@
     }
    ],
    "source": [
-    "# 空值補 0,使用\"最小最大化\"標準化資料 做羅吉斯迴歸\n",
-    "df1 = df.fillna(0)\n",
-    "df_temp = MinMaxScaler().fit_transform(df1.astype(float))\n",
+    "# 空值補 mean,使用\"標準化\"資料 做羅吉斯迴歸\n",
+    "df1 = df.fillna(df.mean())\n",
+    "df_temp = StandardScaler().fit_transform(df1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression(solver='liblinear')\n",
     "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
@@ -524,7 +508,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6982582017719778"
+       "0.7016289882888318"
       ]
      },
      "execution_count": 12,
@@ -533,9 +517,34 @@
     }
    ],
    "source": [
+    "# 空值補 0,使用\"最小最大化\"標準化資料 做羅吉斯迴歸\n",
+    "df1 = df.fillna(0)\n",
+    "df_temp = MinMaxScaler().fit_transform(df1)\n",
+    "train_X = df_temp[:train_num]\n",
+    "estimator = LogisticRegression(solver='liblinear')\n",
+    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6982582017719778"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 空值補 0,使用\"標準化\"資料 做羅吉斯迴歸\n",
     "df1 = df.fillna(0)\n",
-    "df_temp = StandardScaler().fit_transform(df1.astype(float))\n",
+    "df_temp = StandardScaler().fit_transform(df1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression(solver='liblinear')\n",
     "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
