--- a/homework/Day_023_HW.ipynb
+++ b/homework/Day_023_HW.ipynb
@@ -329,8 +329,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   Name  Sex  Ticket  Cabin  Embarked\n",
+      "0   155    1     720    185         3\n",
+      "1   286    0     816    106         0\n",
+      "2   523    0     914    185         3\n",
+      "3   422    0      65     70         3\n",
+      "4    22    1     649    185         3\n",
+      "5   818    1     373    185         2\n",
+      "6   767    1     109    163         3\n",
+      "7   914    1     541    185         3\n",
+      "8   605    0     477    185         3\n",
+      "9   847    0     174    185         0\n",
       "cross_val_score: 0.7789000729487724\n",
-      "time: 0.20669031143188477 sec\n"
+      "time: 0.1230001449584961 sec\n",
+      "cross_val_score: 0.7788747518872878\n",
+      "time: 0.07579755783081055 sec\n"
      ]
     }
    ],
@@ -340,10 +353,17 @@
     "for col in df.columns:\n",
     "    df_temp[col] = LabelEncoder().fit_transform(df[col])\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression(solver='lbfgs')\n",
-    "start_time = time.time()\n",
+    "print(train_X.head(10))\n",
     "\n",
+    "estimator = LogisticRegression(solver='lbfgs')\n",
+    "\n",
+    "start_time = time.time()\n",
     "print(f\"cross_val_score: {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}\")\n",
+    "print(f\"time: {time.time()-start_time} sec\")\n",
+    "\n",
+    "train_temp = train_X.drop(['Name','Ticket'], axis=1)\n",
+    "start_time = time.time()\n",
+    "print(f\"cross_val_score: {cross_val_score(estimator, train_temp, train_Y, cv=5).mean()}\")\n",
     "print(f\"time: {time.time()-start_time} sec\")"
    ]
   },
@@ -351,17 +371,39 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cross_val_score: 0.8350366889413987\n",
+      "time: 0.05285835266113281 sec\n"
+     ]
+    }
+   ],
    "source": [
     "# 均值編碼 + 邏輯斯迴歸\n",
+    "data = pd.concat([df[:train_num],train_Y], axis=1)\n",
+    "for col in df.columns:\n",
+    "    mean_data = data.groupby([col])['Survived'].mean().reset_index()\n",
+    "    mean_data.columns = [col, f'{col}_mean']\n",
+    "    data = pd.merge(data, mean_data, on=col, how='left')\n",
+    "    data = data.drop([col], axis=1)\n",
+    "data = data.drop(['Survived', 'Ticket_mean', 'Name_mean'], axis=1)\n",
+    "# print(data.head(10))\n",
+    "estimator = LogisticRegression(solver='lbfgs')\n",
+    "start_time = time.time()\n",
     "\n",
-    "\n",
-    "# data = pd.concat([df[:train_num],train_Y], axis=1)\n",
-    "# print(data.head())\n",
-    "# for col in df.columns:\n",
-    "#     print(col)\n",
-    "#     te = data[col].value_counts()\n",
-    "#     print(te)"
+    "print(f\"cross_val_score: {cross_val_score(estimator, data, train_Y, cv=5).mean()}\")\n",
+    "print(f\"time: {time.time()-start_time} sec\")\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ans: 如果使用label encoding，因為類別欄位過多不同的值，會造成over fitting，因此導致預測精確度降低。"
    ]
   }
  ],
