--- a/homework/Day_024_HW.ipynb
+++ b/homework/Day_024_HW.ipynb
@@ -177,7 +177,7 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "data_path = 'data/'\n",
+    "data_path = '../data/part2/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -312,6 +312,126 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Cabin\n",
+      "0    185\n",
+      "1    106\n",
+      "2    185\n",
+      "3     70\n",
+      "4    185\n",
+      "cross_val_score = 0.6622709800421095\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Label Encoding\n",
+    "temp_df = df.loc[:,['Cabin']]\n",
+    "temp_df['Cabin'] = LabelEncoder().fit_transform(temp_df['Cabin'])\n",
+    "print(temp_df.head())\n",
+    "estimator = LogisticRegression(solver='lbfgs')\n",
+    "print(f'cross_val_score = {cross_val_score(estimator, temp_df[:train_num], train_Y, cv=5 ).mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Cabin_mean\n",
+      "0    0.299854\n",
+      "1    1.000000\n",
+      "2    0.299854\n",
+      "3    0.500000\n",
+      "4    0.299854\n",
+      "cross_val_score = 0.7486948127642264\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean Encoder\n",
+    "temp_df = pd.concat([df[['Cabin']][:train_num], train_Y], axis=1)\n",
+    "temp_df = temp_df.groupby(['Cabin'])['Survived'].mean().reset_index()\n",
+    "temp_df.columns = ['Cabin', 'Cabin_mean']\n",
+    "temp_df = pd.merge(df['Cabin'], temp_df, on=['Cabin'], how='left')\n",
+    "temp_df = temp_df.drop(['Cabin'],axis=1)\n",
+    "print(temp_df.head())\n",
+    "estimator = LogisticRegression(solver='lbfgs')\n",
+    "print(f'cross_val_score = {cross_val_score(estimator, temp_df[:train_num], train_Y, cv=5 ).mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Cabin_hash\n",
+      "0           4\n",
+      "1           4\n",
+      "2           4\n",
+      "3           4\n",
+      "4           4\n",
+      "cross_val_score = 0.6217830282925625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Featuring Hashing\n",
+    "temp_df = df.loc[:,['Cabin']]\n",
+    "temp_df['Cabin_hash'] = temp_df['Cabin'].map(lambda x: hash(x)%12)\n",
+    "temp_df = temp_df.drop(['Cabin'],axis=1)\n",
+    "print(temp_df.head())\n",
+    "estimator = LogisticRegression(solver='lbfgs')\n",
+    "print(f'cross_val_score = {cross_val_score(estimator, temp_df[:train_num], train_Y, cv=5 ).mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Cabin_counts  Cabin_hash\n",
+      "0          1014           4\n",
+      "1             2           4\n",
+      "2          1014           4\n",
+      "3             2           4\n",
+      "4          1014           4\n",
+      "cross_val_score = 0.6925897239756053\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 'Cabin'計數編碼 + 'Cabin'特徵雜湊 + 邏輯斯迴歸\n",
+    "temp_df = df.loc[:,['Cabin']]\n",
+    "temp_df = temp_df.groupby(['Cabin']).size().reset_index()\n",
+    "temp_df.columns = ['Cabin','Cabin_counts']\n",
+    "temp_df = pd.merge(df['Cabin'],temp_df,on='Cabin',how='left')\n",
+    "temp_df['Cabin_hash'] = temp_df['Cabin'].map(lambda x: hash(x)%12)\n",
+    "temp_df = temp_df.drop(['Cabin'],axis=1)\n",
+    "print(temp_df.head())\n",
+    "estimator = LogisticRegression(solver='lbfgs')\n",
+    "print(f'cross_val_score = {cross_val_score(estimator, temp_df[:train_num], train_Y, cv=5 ).mean()}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -322,167 +442,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.780004837244799\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>155</td>\n",
-       "      <td>1</td>\n",
-       "      <td>720</td>\n",
-       "      <td>185</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>286</td>\n",
-       "      <td>0</td>\n",
-       "      <td>816</td>\n",
-       "      <td>106</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>523</td>\n",
-       "      <td>0</td>\n",
-       "      <td>914</td>\n",
-       "      <td>185</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>422</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65</td>\n",
-       "      <td>70</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>649</td>\n",
-       "      <td>185</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Name  Sex  Ticket  Cabin  Embarked\n",
-       "0   155    1     720    185         3\n",
-       "1   286    0     816    106         0\n",
-       "2   523    0     914    185         3\n",
-       "3   422    0      65     70         3\n",
-       "4    22    1     649    185         3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 對照組 : 標籤編碼 + 邏輯斯迴歸\n",
-    "df_temp = pd.DataFrame()\n",
-    "for c in df.columns:\n",
-    "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression()\n",
-    "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
-    "df_temp.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# 加上 'Cabin' 欄位的計數編碼\n"
+    "#### 經測試均值編碼準確率較高"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 'Cabin'計數編碼 + 邏輯斯迴歸\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 'Cabin'特徵雜湊 + 邏輯斯迴歸\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 'Cabin'計數編碼 + 'Cabin'特徵雜湊 + 邏輯斯迴歸\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -501,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
