--- a/homework/Day_026_HW.ipynb
+++ b/homework/Day_026_HW.ipynb
@@ -328,7 +328,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026876871475636888\n",
-      "Gradient Boosting Reg Score : 0.7102531518128454\n"
+      "Gradient Boosting Reg Score : 0.710434454621069\n"
      ]
     }
    ],
@@ -468,13 +468,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear Reg Score : 0.027525445787303093\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -486,7 +479,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient Boosting Reg Score : 0.8043117244172704\n"
+      "Linear Reg Score : 0.027525445787303093\n",
+      "Gradient Boosting Reg Score : 0.804652417518976\n"
      ]
     }
    ],
@@ -531,7 +525,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient Boosting Reg Score : 0.8071053176429481\n"
+      "Gradient Boosting Reg Score : 0.8061293240717078\n"
      ]
     }
    ],
@@ -573,8 +567,6 @@
     }
    ],
    "source": [
-    "train_X = df['distance_real']\n",
-    "\n",
     "train_X = scaler.fit_transform(df[['distance_real']])\n",
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
     "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
